# easyfhe-architecture-study

./: Cargo.toml  Dockerfile  README.md  index.html  simple_fhe_wrapper.cpp
agents/: traffic_controller.yaml
pipelines/fhe/: energy-forecast.yaml
poc_demo/: cifar_fhe.py
policies/: security_profile.yaml
src/: lib.rs  lib.rs:  main.rs
src/shaders/: cheddar_core.wgsl
vision/: v7-3-vision.html.
