[package]
name = "easyfhe_core"
version = "7.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "studio_validator"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.0"
anyhow = "1.0"

